[package]
name = "uuid32"
version = "1.1.1"
edition = "2024"

license = "MIT"
description = "Uuids formatted as Strings in Crockford base32 for easier to read + copy urls, plus db"
repository = "https://github.com/rogusdev/uuid32"
keywords = ["base32", "ids", "identifiers", "uuid"]
categories = ["encoding"]

exclude = [
    "d",
    "t",
]

[features]
default = []
postgres = ["dep:tokio-postgres", "dep:bytes", "dep:postgres-protocol", "dep:postgres-types"]

[dependencies]
fast32 = { version = "1.0.3", features = ["uuid"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["serde"] }

bytes = { version = "1.10.1", optional = true }
postgres-protocol = { version = "0.6.8", optional = true }
postgres-types = { version = "0.2.9", features = ["derive"], optional = true }
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1"], optional = true }

[dev-dependencies]
serde_json = "1.0.140"

# https://users.rust-lang.org/t/how-to-document-optional-features-in-api-docs/64577/3
# https://stackoverflow.com/questions/61417452/how-to-get-a-feature-requirement-tag-in-the-documentation-generated-by-cargo-do
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
